Working Java 11 build configuration
git-svn-id: svn://svn.hafro.is/jminor/branches/java11@15687 51816742-9f83-410d-85ed-e7bcf7042953